@@ -38,17 +38,26 @@
      */
     divToWysiwygField: function() {
       delete Drupal.settings.wysiwygFields.timer;
-      if (typeof tinyMCE.activeEditor.contentDocument !== "undefined") {
-        $('span.wysiwyg_fields-placeholder', tinyMCE.activeEditor.contentDocument.body).each(function() {
-          $(this).removeClass('wysiwyg_fields-placeholder');
-          replacement = "<span id='" + $(this).attr('id') + "' class='" + $(this).attr('class') + "'>" + Drupal.settings.wysiwygFields.replacements['[' + $(this).attr('id') + ']'] + "</span>";
-          Drupal.wysiwygFields.wysiwyg.tinymce.wysiwygIsNode(this);
-          Drupal.wysiwyg.instances[Drupal.settings.wysiwygFields.activeId].insert(replacement);
+      if (typeof tinyMCE !== "undefined") {
+        $.each(tinyMCE.editors, function(instance) {
+          if (typeof tinyMCE.editors[instance].contentDocument !== "undefined") {
+            $('span.wysiwyg_fields-placeholder', tinyMCE.editors[instance].contentDocument.body).each(function() {
+              $(this).removeClass('wysiwyg_fields-placeholder');
+              replacement = "<span id='" + $(this).attr('id') + "' class='" + $(this).attr('class') + "'>" + Drupal.settings.wysiwygFields.replacements['[' + $(this).attr('id') + ']'] + "</span>";
+              Drupal.wysiwygFields.wysiwyg.tinymce.wysiwygIsNode(this);
+              Drupal.wysiwyg.instances[tinyMCE.editors[instance].editorId].insert(replacement);
+            });
+          }
+
+          else {
+            // Document not ready, reset timer.
+            Drupal.wysiwygFields._wysiwygAttach();
+          }
         });
       }
 
       else {
-        // Document not ready, reset timer.
+        // API not ready, reset timer.
         Drupal.wysiwygFields._wysiwygAttach();
       }
     }
